--- a/parts/delta/model_doc.jade
+++ b/parts/delta/model_doc.jade
@@ -56,10 +56,10 @@ template(name='model_doc_view')
                             |by
                             +author_info
                             +creation_info
+                        +comments
                         div
-                        +karma_transaction
-                        div
-                    .eight.wide.column
+                        //- +karma_transaction
+                    .twelve.wide.column
                         .ui.header
                             each fields
                                 if header
@@ -71,16 +71,16 @@ template(name='model_doc_view')
                             unless header
                                 .item
                                     +Template.dynamic template=view_template 
-                    .four.wide.column                
-                        .ui.header actions 
-                        each actions
-                            .ui.header #{title} 
-                            +Template.dynamic template=slug
-                        each action_types
-                            .ui.header #{title}
-                            +Template.dynamic template=slug
-                        +comments
-                        //- div
+                    //- .four.wide.column                
+                    //-     .ui.header actions 
+                    //-     //- each actions
+                    //-     //-     .ui.header #{title} 
+                    //-     //-     +Template.dynamic template=slug
+                    //-     //- each action_types
+                    //-     //-     .ui.header #{title}
+                    //-     //-     +Template.dynamic template=slug
+                    //-     +comments
+                    //-     //- div
             if watson
                 .row
                     .sixteen.wide.column
