--- a/parts/accounts/user_sections.jade
+++ b/parts/accounts/user_sections.jade
@@ -282,7 +282,7 @@ template(name='user_brain_small')
 //-                 each tags
 //-                     .ui.basic.label #{this}
 
-    //- .ui.horizontal.card
+    //- .ui.card
     //-     .image
     //-         if image_id
     //-             img(src="{{c.url image_id gravity='face' crop='crop'}}")
