--- a/parts/delta/model.jade
+++ b/parts/delta/model.jade
@@ -7,11 +7,10 @@ template(name='model_edit')
                         small edit model
                         | #{title}
                     +creation_info
-                    .ui.basic.center.aligned.segment
-                        a.ui.large.icon.button(href="/m/#{slug}")
-                            i.big.checkmark.icon
-                        #delete_model.ui.icon.button
-                            i.trash.icon
+                    .ui.large.icon.button.save_model
+                        i.big.checkmark.icon
+                    #delete_model.ui.icon.button
+                        i.trash.icon
                     .ui.form
                         +text_edit key='title' label='title' direct=true
                         +slug_edit key='slug' label='slug' direct=true
