--- a/parts/profile/user_connections.jade
+++ b/parts/profile/user_connections.jade
@@ -30,7 +30,7 @@ template(name='user_segment')
             +user_connect_button
             +user_status user
 
-    //- .ui.horizontal.card
+    //- .ui.card
     //-     .image
     //-         if image_id
     //-             img(src="{{c.url image_id gravity='face' crop='crop'}}")
