--- a/parts/rentals/rental_edit.jade
+++ b/parts/rentals/rental_edit.jade
@@ -1,8 +1,8 @@
 template(name='rental_edit')
     with current_doc
         .ui.stackable.padded.grid
-            .three.column.row
-                .column 
+            .row
+                .four.wide.column 
                     .ui.header 
                         i.pencil.icon
                         | edit '#{title}' rental
@@ -14,14 +14,14 @@ template(name='rental_edit')
                         +single_user_edit key='_author_username' label='author username' direct=true
                         +link_edit key='amazon_referral_link' label='amazon referral link' icon='amazon' direct=true
                     +text_edit key='title' direct=true
-                    +textarea_edit key='description' label='description' icon='content' direct=true
                     +array_edit key='tags' label='tags' icon='tags' direct=true
                     +array_edit key='private_location_tags' label='private location tags' icon='marker' direct=true tooltip='for handlers and buyers who are picking up'
                     +array_edit key='public_location_tags' label='public location tags' icon='marker' direct=true tooltip='fo people to find the rental'
                     //- +array_edit key='location_tags' label='location tags' icon='marker' direct=true
                     +text_edit key='contact_info' label='contact info' icon='info' direct=true
                     
-                .column
+                .eight.wide.column
+                    +html_edit key='description' label='description' icon='content' direct=true
                     .ui.header 
                         |finance
                     +float_edit key='hourly_dollars' label='hourly rate (c)' icon='clock' direct=true
@@ -30,62 +30,62 @@ template(name='rental_edit')
                     if daily_rate
                         +float_edit key='daily_dollars' label='daily rate (c)' icon='exchange' direct=true
                     div
-                    //- +boolean_edit key='auction' label='auction' icon='podium-with-audience--v2' direct=true
-                    //- if auction
-                    //-     +number_edit key='auction_cutoff_hours' label='auction cutoff (hours)' direct=true
-                    //-     +float_edit key='minimum_bid' label='hour minimum bid ($)' icon='refund' direct=true
+                    +boolean_edit key='auction' label='auction' icon='podium-with-audience--v2' direct=true
+                    if auction
+                        +number_edit key='auction_cutoff_hours' label='auction cutoff (hours)' direct=true
+                        +float_edit key='minimum_bid' label='hour minimum bid ($)' icon='refund' direct=true
                     div
                     +boolean_edit key='security_deposit_required' label='security deposit required' icon='lock' direct=true
                     if security_deposit_required
                         +number_edit key='security_deposit_amount' label='security deposit amount (c)' icon='lock' direct=true tooltip='amount will be held from renters account then returned upon successful transaction'
                         div
                         +boolean_edit key='friends_exempt' label='friends exempt' icon='users' direct=true
-                .column
+                .four.wide.column
                     +image_edit key='image' label='image' direct=true
-                //- .column
-                    //- .ui.header
-                    //-     +i name='rules'
-                    //-     | policies
-                    //- +boolean_edit key='approval_required' label='approval required' icon='checkmark' direct=true
-                    //- if approval_required
-                    //-     div
-                    //-     |you will receive a notification when reservations are requested
-                    //- .ui.small.header
-                    //-     +i name='refund'
-                    //-     | refunds
-                    //- +boolean_edit key='allow_refunds' label='allow refunds' icon='refund' direct=true
-                    //- if allow_refunds
-                    //-     +number_edit key='full_refund_cutoff_hours' label='full refund cutoff hours' icon='clock' direct=true
-                    //-     +number_edit key='half_refund_cutoff_hours' label='half refund cutoff hours' icon='clock' direct=true
-                .column
+                .four.wide.column
+                    .ui.header
+                        +i name='rules'
+                        | policies
+                    +boolean_edit key='approval_required' label='approval required' icon='checkmark' direct=true
+                    if approval_required
+                        div
+                        |you will receive a notification when reservations are requested
+                    .ui.small.header
+                        +i name='refund'
+                        | refunds
+                    +boolean_edit key='allow_refunds' label='allow refunds' icon='refund' direct=true
+                    if allow_refunds
+                        +number_edit key='full_refund_cutoff_hours' label='full refund cutoff hours' icon='clock' direct=true
+                        +number_edit key='half_refund_cutoff_hours' label='half refund cutoff hours' icon='clock' direct=true
+                .four.wide.column
                     .ui.header 
                         +i name='pie chart'
                         |ownership
                     +single_user_edit key='owner_username' label='owner' direct=true
                     +single_user_edit key='handler_username' label='handler' direct=true
-                //- .column
-                //-     .ui.header 
-                //-         +i name='friends'
-                //-         |availability
-                //-     +array_edit key='availability_tags' label='availability tags' icon='clock' direct=true
-                //-     +boolean_edit key='available' label='currently available' direct=true
-                //-     +multi_doc_edit key='available_days' label='available days' ref_model='day_of_week' direct=true
-                //- .column
-                //-     .ui.header audience
-                //-     +boolean_edit key='transaction_number_restriction' label='transaction number restriction' icon='hashtag' direct=true
-                //-     if transaction_number_restriction
-                //-         +number_edit key='transaction_number_restriction_threshold' label='transaction number restriction threshold'
-                //-     +boolean_edit key='transaction_amount_restriction' label='transaction amount restriction' icon='money' direct=true
-                //-     if transaction_amount_restriction
-                //-         +number_edit key='transaction_amount_restriction_threshold' label='transaction amount restriction threshold'
-                //-     +boolean_edit key='visible_to_public' label='visible to public' direct=true
-                //-     unless visible_to_public
-                //-         +boolean_edit key='visible_to_friends' label='visible to friends' direct=true
-                //-     unless visible_to_public
-                //-         +boolean_edit key='visible_to_specific_people' label='visible to specific people' direct=true
-                //-         if visible_to_specific_people
-                //-             +multi_user_edit key='visible_to_member_ids' label='visible to members:' direct=true
-                .column
+                .four.wide.column
+                    .ui.header 
+                        +i name='friends'
+                        |availability
+                    +array_edit key='availability_tags' label='availability tags' icon='clock' direct=true
+                    +boolean_edit key='available' label='currently available' direct=true
+                    +multi_doc_edit key='available_days' label='available days' ref_model='day_of_week' direct=true
+                .four.wide.column
+                    .ui.header audience
+                    +boolean_edit key='transaction_number_restriction' label='transaction number restriction' icon='hashtag' direct=true
+                    if transaction_number_restriction
+                        +number_edit key='transaction_number_restriction_threshold' label='transaction number restriction threshold'
+                    +boolean_edit key='transaction_amount_restriction' label='transaction amount restriction' icon='money' direct=true
+                    if transaction_amount_restriction
+                        +number_edit key='transaction_amount_restriction_threshold' label='transaction amount restriction threshold'
+                    +boolean_edit key='visible_to_public' label='visible to public' direct=true
+                    unless visible_to_public
+                        +boolean_edit key='visible_to_friends' label='visible to friends' direct=true
+                    unless visible_to_public
+                        +boolean_edit key='visible_to_specific_people' label='visible to specific people' direct=true
+                        if visible_to_specific_people
+                            +multi_user_edit key='visible_to_member_ids' label='visible to members:' direct=true
+                .four.wide.column
                     .ui.header 
                         i.people.carry
                         |delivery
@@ -103,9 +103,9 @@ template(name='rental_edit')
                     +boolean_edit key='res_end_pickup' label='pickup' icon='truck' direct=true
                     if res_end_pickup
                         +number_edit key='res_end_pickup_fee' label='reservation end pickup fee' icon='low-price' direct=true
-                //- .column
-                //-     .ui.header 
-                //-         +i name='delivery'
-                //-         |notifications
-                //-     +boolean_edit key='notify_on_reservation' label='on new reservation' icon='plus' direct=true
-                //-     +boolean_edit key='notify_on_cancelation' label='on reservation cancelation' icon='cancel-2--v1' direct=true
+                .four.wide.column
+                    .ui.header 
+                        +i name='delivery'
+                        |notifications
+                    +boolean_edit key='notify_on_reservation' label='on new reservation' icon='plus' direct=true
+                    +boolean_edit key='notify_on_cancelation' label='on reservation cancelation' icon='cancel-2--v1' direct=true
