--- a/client/home.jade
+++ b/client/home.jade
@@ -14,66 +14,36 @@ template(name='home')
                                 .ui.grey.icon.header 
                                     i.grey.shapes.icon
                                     |delta
-                    //- a.ui.card(href="/minutes")
-                    //-     .content 
-                    //-         .ui.grey.icon.header 
-                    //-             i.grey.clock.icon
-                    //-             |minutes
-                    //- a.ui.card(href="/courses")
-                    //-     .content 
-                    //-         .ui.grey.icon.header 
-                    //-             i.grey.chalkboard.icon
-                    //-             |courses
                     a.ui.card(href="/m/food")
                         .content 
                             .ui.grey.icon.header 
                                 i.grey.food.icon
                                 |food
-                    a.ui.card(href="/work_orders")
-                        .content 
-                            .ui.grey.icon.header 
-                                i.grey.wrench.icon
-                                |work orders
-                    //- a.ui.card(href="/tests")
-                    //-     .content 
-                    //-         .ui.grey.icon.header
-                    //-             i.grey.edit.icon
-                    //-             | tests
-                    //- a.ui.card(href="/gallery")
-                    //-     .content 
-                    //-         .ui.grey.icon.header
-                    //-             i.grey.photo.icon
-                    //-             | gallery
                     a.ui.card(href="/rentals")
                         .content 
                             .ui.grey.icon.header 
-                                i.grey.hand.holding.usd.icon
+                                i.grey.clock.icon
                                 | rentals
                     a.ui.card(href="/chat")
                         .content 
                             .ui.grey.icon.header
                                 i.grey.comment.outline.icon
                                 | chat
-                    a.ui.card(href="/events")
-                        .content 
-                            .ui.grey.icon.header
-                                i.grey.calendar.icon
-                                | events
-                    //- a.ui.card(href="/m/article")
+                    //- a.ui.card(href="/events")
                     //-     .content 
                     //-         .ui.grey.icon.header
-                    //-             i.grey.document.icon
-                    //-             | article
-                    a.ui.card(href="/bounty")
+                    //-             i.grey.calendar.icon
+                    //-             | events
+                    a.ui.card(href="/m/reservation")
                         .content 
                             .ui.grey.icon.header
-                                i.grey.money.icon
-                                | bounty
-                    //- a.ui.card(href="/posts")
+                                i.grey.list.icon
+                                | reservations
+                    //- a.ui.card(href="/bounty")
                     //-     .content 
                     //-         .ui.grey.icon.header
-                    //-             i.grey.blog.icon
-                    //-             | posts
+                    //-             i.grey.hand.holding.usd.icon
+                    //-             | bounties
                     a.ui.card(href="/m/service")
                         .content 
                             .ui.grey.icon.header
@@ -94,31 +64,6 @@ template(name='home')
                             .ui.grey.icon.header
                                 i.grey.tasks.icon
                                 |tasks
-                    //- a.ui.card(href="/time")
-                    //-     .content 
-                    //-         .ui.grey.icon.header
-                    //-             i.grey.clock.icon
-                    //-             |time
-                    //- a.ui.card(href="/m/boulder")
-                    //-     .content 
-                    //-         .ui.grey.icon.header
-                    //-             i.grey.leaf.icon
-                    //-             |boulder
-                    //- a.ui.card(href="/m/condo_listing")
-                    //-     .content 
-                    //-         .ui.grey.icon.header
-                    //-             i.grey.building.icon
-                    //-             |condo listings
-                    //- a.ui.card(href="/m/ballot")
-                    //-     .content 
-                    //-         .ui.grey.icon.header
-                    //-             i.grey.thumbs.up.icon
-                    //-             |ballots
-                    //- a.ui.card(href="/thoughts")
-                    //-     .content 
-                    //-         .ui.grey.icon.header
-                    //-             i.grey.brain.icon
-                    //-             |thoughts
                     a.ui.card(href="/m/bug")
                         .content 
                             .ui.grey.icon.header
@@ -131,3 +76,90 @@ template(name='home')
     +global_stats        
             
             
+
+
+template(name='revenue_calculator')
+    .ui.fluid.accordion
+        .active.title
+            .ui.header 
+                +i name='calculator'
+                |rental revenue calculator
+                i.dropdown.icon
+        .active.content
+            with calculator_doc
+                .ui.stackable.grid
+                    .ten.wide.column
+                        if is_admin
+                            .ui.button.create_simluated_item 
+                                i.plus.icon
+                                |simulated item
+                        .ui.three.stackable.cards
+                            each items
+                                +simulated_rental_item
+                    .six.wide.column.result_column
+                        .ui.header 
+                            |daily: 
+                            small spend 
+                            | #{total_daily_hours_committed}
+                            small hrs on 
+                            | #{daily_rentals}
+                            small reservations for
+                            |$#{totaled_daily_revenue}
+                        .ui.header
+                            |weekly:  
+                            small spend
+                            | #{total_weekly_hours_committed}
+                            small hrs on
+                            |#{total_weekly_rentals}
+                            small reservations for
+                            |$#{totaled_weekly_revenue}
+                        .ui.header 
+                            |$#{totaled_monthly_revenue}
+                            small per month
+                        .ui.header
+                            small avg
+                            |$#{average_hourly_wage}
+                            small per hr wage
+                        .ui.header 
+                            //- +i name='friends'
+                            |#{total_neighbor_interactions} neighbor interactions
+
+
+template(name='simulated_rental_item')
+    .ui.card
+        .content
+            .ui.inline.header simulated item
+            .ui.form
+                .eight.wide.field(title='individual reservations, extra revenue for requested pickup/dropoff')
+                    label reservations/day
+                    input.rental_amount(type='number' value="#{rental_amount}" min='0')
+                .ui.right.labeled.fluid.input(title='hourly rate, your cut depends on owner/handler status')
+                    input.average_hourly(type='number' value="#{average_hourly}" min='0')
+                    .ui.basic.label $/hr
+                .ui.labeled.fluid.input(title='hours per day rental is active/circulated')
+                    input.daily_hours_rented(type='number' value="#{daily_hours_rented}" min='0' max='24')
+                    .ui.basic.label hrs/day
+            //- |$#{average_hourly}/hr 
+            +small_boolean_edit key='owned' icon='money bill' title='you own the product and passively get 50% of the fee')
+            +small_boolean_edit key='handled' icon='suitcase rolling' title='you facilitate the rental and get 45% of the fee')
+            if handled
+                +small_boolean_edit key='delivery' icon='luggage cart' title='assume a 5min delivery and pickup per reservation')
+            |* #{hourly_cut}% cut
+            div
+            .ui.inline.header(title='time spent facilitating transactions')
+                |= 
+                |#{minutes_committed}
+                small mins for
+            .ui.inline.header 
+                |$#{calculated_daily_revenue} 
+                small daily
+            .ui.inline.header 
+                |$#{calculated_weekly_revenue} 
+                small weekly
+        if is_admin
+            +remove_button
+    
+
+template(name='small_boolean_edit')
+    .ui.icon.button.toggle_boolean(title=title class=boolean_toggle_class)
+        i.icon(class=icon)
