--- a/client/nav.jade
+++ b/client/nav.jade
@@ -9,12 +9,10 @@ template(name='nav')
                     i.large.yin.yang.icon
             a.item(href='/global_stats' class="{{isActivePath '/global_stats'}}")
                 i.line.chart.icon
-            a.item(href='/m/rental' class="{{isActivePath '/m/rental'}}" title='rentals')
+            //- a.item(href='/m/rental' class="{{isActivePath '/m/rental'}}" title='rentals')
+            //-     i.hand.holding.usd.icon
+            a.item(href='/rentals' class="{{isActivePath '/rentals'}}" title='rentals')
                 i.hand.holding.usd.icon
-            //- if is_member
-            //-     each role_models
-            //-         a.set_model(href="/m/#{slug}" class="{{isActivePath '/m/model'}}" title=title)
-            //-             +i name=icon classes='ui mini inline image'
             if is_dev
                 a.item(href='/members' class="{{isActivePath '/members'}}")
                     i.users.icon
@@ -34,8 +32,8 @@ template(name='nav')
                 if currentUser
                     unless logging_out
                         if is_member
-                            a.icon.item(href="/chat" class="{{isActivePath '/chat'}}")
-                                i.comment.icon
+                            //- a.icon.item(href="/chat" class="{{isActivePath '/chat'}}")
+                            //-     i.comment.icon
                             a.icon.item(href="/alerts" class="{{isActivePath '/alerts'}}")
                                 i.bell.icon
                             a.icon.item(href="/tasks" class="{{isActivePath '/tasks'}}")
@@ -45,21 +43,21 @@ template(name='nav')
                                 |#{cart_amount}
                             a.icon.item(href="/events" class="{{isActivePath '/events'}}")
                                 i.calendar.icon
-                            a.icon.item(href="/groups" class="{{isActivePath '/groups'}}")
-                                i.users.icon
-                            a.item(href="/member/#{currentUser.username}/finance" class="{{isActiveRoute regex='member_finance'}}" title='credits')
-                                i.coins.icon
+                            //- a.icon.item(href="/groups" class="{{isActivePath '/groups'}}")
+                            //-     i.users.icon
+                            //- a.item(href="/member/#{currentUser.username}/finance" class="{{isActiveRoute regex='member_finance'}}" title='credits')
+                            //-     i.coins.icon
                             a.item(href="/member/#{currentUser.username}/dashboard" class=member_nav_button_class title=member_nav_button_title)
                                 if currentUser.profile_image_id
-                                    img.ui.avatar.inline.image(src="{{c.url currentUser.profile_image_id width=100 gravity='face' crop='fill'}}")
+                                    img.ui.avatar.inline.image(src="{{c.url currentUser.profile_image_id width=100 height=100 gravity='face' crop='fill'}}")
                                 else
                                     i.user.icon
                                 span.mobile.hidden #{currentUser.name}
-                                    |{{int currentUser.credit}}
+                                    |${{int currentUser.credit}}
                         else
                             a.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user_profile'}}")
                                 if currentUser.profile_photo
-                                    img.ui.avatar.inline.image(src="{{c.url currentUser.profile_photo width=100 height=100 gravity='face' crop='fill'}}")
+                                    img.ui.avatar.image(src="{{c.url currentUser.profile_photo width=100 height=100 gravity='face' crop='fill'}}")
                                 else
                                     i.user.icon
                                 span.mobile.hidden #{currentUser.name}
@@ -71,9 +69,9 @@ template(name='nav')
                             i.sign.out.icon
                 else
                     unless currentUser
-                        a.item(href='/login' title='login') 
+                        a.item(href='/login' title='enter') 
                             i.sign.in.icon
-                            |login
+                            //- |login
 
 
 template(name='footer')
