--- a/parts/accounts/login.jade
+++ b/parts/accounts/login.jade
@@ -3,16 +3,17 @@ template(name='login')
         .centered.row
             .eight.wide.column
                 h1.ui.center.aligned.header
-                    | gold run login
-                if message
-                    h4.ui.center.aligned.header #{message}
+                    | enter
                 .ui.inline.small.header 
                     //- +i name='user-male'
+                    i.user.icon
                     |username
                 .ui.fluid.large.input(class=login_class)
                     input.username(type='text')
+                .spacer
                 .ui.inline.small.header 
                     //- +i name='password'
+                    i.lock.icon
                     | password
                 .ui.fluid.large.input(class=login_class)
                     input.password(type='password')
@@ -26,13 +27,13 @@ template(name='login')
                         //- i.right.chevron.icon
                 else
                     if username
-                        .ui.center.aligned.segment
+                        .ui.center.aligned.basic.segment
                             .ui.header no '#{username}' user
                             a.ui.button(href='/register')
                                 i.user.plus.icon
                                 //- +i name='enter-2' classes='ui mini inline image'                    
                                 | register
-                .ui.center.aligned.segment    
+                .ui.center.aligned.basic.segment    
                     a.ui.button(href='/forgot_password')
                         //- +i name='forgot-password' classes='ui mini inline image'                    
                         i.refresh.icon
