--- a/parts/delta/delta.jade
+++ b/parts/delta/delta.jade
@@ -40,7 +40,7 @@ template(name='delta')
                     each sorted_facets
                         +facet
                 .eleven.wide.column
-                    .filter_row.ui.segment(class=loading_class)
+                    .filter_row.ui.basic.segment(class=loading_class)
                         .ui.inline.small.grey.header(title='change sort direction')
                             |sort by
                         .ui.compact.small.menu
