--- a/parts/profile/member_edit.jade
+++ b/parts/profile/member_edit.jade
@@ -2,15 +2,15 @@ template(name='member_edit')
     with user_from_username_param          
         img.ui.fluid.image.checkin_banner(src="{{c.url banner_image_id width=1000 height=500 crop='crop'}}")    
         .ui.stackable.padded.grid
-            .three.column.row
-                .column
+            .row
+                .four.wide.column
                     .ui.center.aligned.large.inline.grey.header
                         | #{name}
                         //- | #{user_from_username_param.first_name} #{user_from_username_param.last_name}
                     //- +i name='pencil'
                     //- .ui.small.inline.header @#{user_from_username_param.username}
                     a.ui.big.fluid.button(href="/member/#{user_from_username_param.username}/") 
-                        i.checkmark.big.green.icon
+                        i.checkmark.big.icon
                         strong save
                     .ui.hidden.divider
                     +image_edit key='profile_image_id' icon='picture' title='profile image' direct=true
@@ -22,25 +22,23 @@ template(name='member_edit')
                         .ui.orange.button.remove_user 
                             i.remove.icon
                             |delete user
-                .column
-                    .ui.form
-                        +text_edit key='nickname' label='nickname' icon='anonymous-mask' direct=true
-                        //- +text_edit key='first_name' label='first name' icon='header' direct=true
-                        //- +text_edit key='last_name' label='last name' icon='text' direct=true
-                        //- +text_edit key='address' label='address' icon='marker' direct=true
-                        +array_edit key='location_tags' label='location tags' icon='marker' direct=true
-                        +boolean_edit key='profile_published' label='publish profile' direct=true subtitle='in the directory'
-                        div
-                        .ui.segment
-                            .ui.header 
-                                i.envelope.outline.icon
-                                |emails
-                            +emails_edit
-            
-                        +phone_edit key='phone' label='phone' icon='phone' direct=true
-                        +array_edit key='tags' label='tags' icon='tags' direct=true
-                        //- +image_edit key='banner_image_id' label='banner image' direct=true
-                        +textarea_edit key='bio' label='bio' direct=true
-                .column
+                .eight.wide.column
+                    +text_edit key='nickname' label='nickname' icon='anonymous-mask' direct=true
+                    //- +text_edit key='first_name' label='first name' icon='header' direct=true
+                    //- +text_edit key='last_name' label='last name' icon='text' direct=true
+                    //- +text_edit key='address' label='address' icon='marker' direct=true
+                    +array_edit key='location_tags' label='location tags' icon='marker' direct=true
+                    +boolean_edit key='profile_published' label='publish profile' direct=true subtitle='in the directory'
+                    div
+                    .ui.header 
+                        i.envelope.outline.icon
+                        |emails
+                    +emails_edit
+        
+                    +phone_edit key='phone' label='phone' icon='phone' direct=true
+                    +array_edit key='tags' label='tags' icon='tags' direct=true
+                    //- +image_edit key='banner_image_id' label='banner image' direct=true
+                    +textarea_edit key='bio' label='bio' direct=true
+                .four.wide.column
                     +number_edit key='daily_goal_active' label='daily active goal' tooltip='amount desired actively participating in the marketplace (handling/running)' direct=true
                     +number_edit key='daily_goal_passive' label='daily passive goal' tooltip='amount desired with no effort (owning)' direct=true
