--- a/parts/profile/member_profile.jade
+++ b/parts/profile/member_profile.jade
@@ -20,7 +20,7 @@ template(name='member_profile_layout')
                             //- strong #{user.first_name} #{user.last_name}
                             //- small @#{user.username}        
                     a.ui.header(href="/member/#{user_from_username_param.username}/finance" title='credit')
-                        +i name='coins'
+                        i.coins.icon
                         |{{fixed user.credit}}
                     .ui.two.column.middle.aligned.grid.mobile.only
                         .column
@@ -76,94 +76,98 @@ template(name='member_profile_layout')
                         each roles
                             .ui.label #{this}
                 .twelve.wide.column
-                    a.ui.large.compact.button(href="/member/#{username}/dashboard" class="{{isActiveRoute 'member_dashboard'}}")
+                    a.ui.large.compact.big.button(href="/member/#{username}/dashboard" class="{{isActiveRoute 'member_dashboard'}}")
                         i.dashboard.icon
                         |dashboard
-                    a.ui.large.compact.button(href="/member/#{username}/info" class="{{isActiveRoute 'member_info'}}")
+                    a.ui.large.compact.big.button(href="/member/#{username}/info" class="{{isActiveRoute 'member_info'}}")
                         i.info.icon
                         |info
-                    a.ui.large.compact.button(href="/member/#{username}/rentals" class="{{isActiveRoute 'member_rentals'}}")
+                    a.ui.large.compact.big.button(href="/member/#{username}/rentals" class="{{isActiveRoute 'member_rentals'}}")
                         i.clock.icon
                         |rentals
-                    a.ui.large.compact.button(href="/member/#{username}/handling" class="{{isActiveRoute 'member_handling'}}")
+                    a.ui.large.compact.big.button(href="/member/#{username}/handling" class="{{isActiveRoute 'member_handling'}}")
                         i.hand.holding.icon
                         |handling
-                    a.ui.large.compact.button(href="/member/#{username}/reservations" class="{{isActiveRoute 'member_reservations'}}")
+                    a.ui.large.compact.big.button(href="/member/#{username}/reservations" class="{{isActiveRoute 'member_reservations'}}")
                         i.clock.icon
                         |reservations
-                    a.ui.compact.button(href="/member/#{username}/bookmarks" class="{{isActiveRoute 'member_bookmarks'}}")
+                    a.ui.compact.big.button(href="/member/#{username}/bookmarks" class="{{isActiveRoute 'member_bookmarks'}}")
                         i.bookmark.icon
                         |bookmarks
-                    a.ui.compact.button(href="/member/#{username}/contact" class="{{isActiveRoute 'member_contact'}}")
+                    a.ui.compact.big.button(href="/member/#{username}/contact" class="{{isActiveRoute 'member_contact'}}")
                         i.phone.icon
                         |contact
-                    //- a.ui.compact.button(href="/member/#{username}/comparison" class="{{isActiveRoute 'member_comparison'}}")
+                    //- a.ui.compact.big.button(href="/member/#{username}/comparison" class="{{isActiveRoute 'member_comparison'}}")
                     //-     i.transaction.icon
                     //-     |comparison
-                    a.ui.compact.button(href="/member/#{username}/offers" class="{{isActiveRoute 'member_offers'}}")
+                    a.ui.compact.big.button(href="/member/#{username}/offers" class="{{isActiveRoute 'member_offers'}}")
                         i.hand.holding.usd.icon
                         |offers
-                    //- a.ui.compact.button(href="/member/#{username}/tags" class="{{isActiveRoute 'member_tags'}}")
+                    //- a.ui.compact.big.button(href="/member/#{username}/tags" class="{{isActiveRoute 'member_tags'}}")
                     //-     i.tags.icon
                     //-     |tags
-                    a.ui.compact.button(href="/member/#{username}/messages" class="{{isActiveRoute 'member_messages'}}")
+                    a.ui.compact.big.button(href="/member/#{username}/messages" class="{{isActiveRoute 'member_messages'}}")
                         i.envelope.icon
                         |mail
-                    a.ui.compact.button(href="/member/#{username}/stats" class="{{isActiveRoute 'member_stats'}}")
+                    a.ui.compact.big.button(href="/member/#{username}/stats" class="{{isActiveRoute 'member_stats'}}")
                         i.line.chart.icon
                         |stats
-                    a.ui.compact.button(href="/member/#{username}/notifications" class="{{isActiveRoute 'member_notifications'}}")
-                        i.bell.icon
-                        |alerts
-                    a.ui.compact.button(href="/member/#{username}/credit" class="{{isActiveRoute regex='user_credit'}}")
+                    //- a.ui.compact.big.button(href="/member/#{username}/notifications" class="{{isActiveRoute 'member_notifications'}}")
+                    //-     i.bell.icon
+                    //-     |alerts
+                    a.ui.compact.big.button(href="/member/#{username}/credit" class="{{isActiveRoute regex='user_credit'}}")
                         i.coins.grey.icon
                         |credit
-                    //- a.ui.compact.button(href="/member/#{username}/questions" class="{{isActiveRoute regex=user_offers}}")
+                    //- a.ui.compact.big.button(href="/member/#{username}/questions" class="{{isActiveRoute regex=user_offers}}")
                     //-     i.question.mark.icon
                     //-     |questions
-                    //- a.ui.compact.button(href="/member/#{username}/passages" class="{{isActiveRoute regex=user_passages}}")
+                    //- a.ui.compact.big.button(href="/member/#{username}/passages" class="{{isActiveRoute regex=user_passages}}")
                     //-     i.list.icon
                     //-     |passages
-                    a.ui.compact.button(href="/member/#{username}/shop" class="{{isActiveRoute regex='user_shop'}}")
+                    a.ui.compact.big.button(href="/member/#{username}/shop" class="{{isActiveRoute regex='user_shop'}}")
                         i.shopping.cart.grey.icon
                         |shop
-                    a.ui.compact.button(href="/member/#{username}/requests" class="{{isActiveRoute regex='user_requests'}}")
+                    a.ui.compact.big.button(href="/member/#{username}/requests" class="{{isActiveRoute regex='user_requests'}}")
                         i.hand.holding.usd.grey.icon
                         | requests
-                    a.ui.compact.button(href="/member/#{username}/social" class="{{isActiveRoute regex='user_social'}}")
+                    a.ui.compact.big.button(href="/member/#{username}/social" class="{{isActiveRoute regex='user_social'}}")
                         i.comments.grey.icon
                         |social
-                    //- a.ui.compact.button(href="/member/#{username}/brain" class="{{isActiveRoute regex='user_brain'}}")
+                    a.ui.compact.big.button(href="/member/#{username}/finance" class="{{isActiveRoute regex='user_finance'}}")
+                        i.grey.finance.icon
+                        |finance
+                    //- a.ui.compact.big.button(href="/member/#{username}/brain" class="{{isActiveRoute regex='user_brain'}}")
                     //-     i.grey.brain.icon
                     //-     |brain
-                    //- a.ui.compact.button(href="/member/#{username}/karma" class="{{isActiveRoute regex='user_karma'}}")
+                    //- a.ui.compact.big.button(href="/member/#{username}/karma" class="{{isActiveRoute regex='user_karma'}}")
                     //-     i.grey.yin.yang.icon
                     //-     |karma
-                    //- a.ui.compact.button(href="/member/#{username}/right" class="{{isActiveRoute regex='user_right'}}")
+                    //- a.ui.compact.big.button(href="/member/#{username}/right" class="{{isActiveRoute regex='user_right'}}")
                     //-     i.grey.checkmark.icon
                     //-     |right
-                    //- a.ui.compact.button(href="/member/#{username}/wrong" class="{{isActiveRoute regex='user_wrong'}}")
+                    //- a.ui.compact.big.button(href="/member/#{username}/wrong" class="{{isActiveRoute regex='user_wrong'}}")
                     //-     i.grey.remove.icon
                     //-     |wrong
-                    a.ui.compact.button(href="/member/#{username}/cart" class="{{isActiveRoute regex='user_cart'}}")
+                    a.ui.compact.big.button(href="/member/#{username}/cart" class="{{isActiveRoute regex='user_cart'}}")
                         i.grey.shopping.cart.icon
                         |cart
-                    a.ui.compact.button(href="/member/#{username}/groups" class="{{isActiveRoute regex='user_groups'}}")
+                    a.ui.compact.big.button(href="/member/#{username}/groups" class="{{isActiveRoute regex='user_groups'}}")
                         i.grey.users.icon
                         |groups
-                    //- a.ui.compact.button(href="/member/#{username}/tutoring" class="{{isActiveRoute regex='user_tutoring'}}")
+                    //- a.ui.compact.big.button(href="/member/#{username}/tutoring" class="{{isActiveRoute regex='user_tutoring'}}")
                     //-     i.grey.chalkboard.icon
                     //-     |tutoring
-                    a.ui.compact.button(href="/member/#{username}/events" class="{{isActiveRoute regex='user_events'}}")
+                    a.ui.compact.big.button(href="/member/#{username}/events" class="{{isActiveRoute regex='user_events'}}")
                         i.grey.calendar.icon
                         |events
-                    //- a.ui.compact.button(href="/member/#{username}/awards" class="{{isActiveRoute regex=user_awards}}")
+                    //- a.ui.compact.big.button(href="/member/#{username}/awards" class="{{isActiveRoute regex=user_awards}}")
                     //-     i.grey.award.icon
                     //-     |awards
-                    a.ui.compact.button(href="/member/#{username}/friends" class="{{isActiveRoute regex='user_friends'}}")
+                    a.ui.compact.big.button(href="/member/#{username}/friends" class="{{isActiveRoute regex='user_friends'}}")
                         i.grey.users.icon
                         |friends
         
                     div.global_container
+                        .spacer
                         +yield
     +footer 
