--- a/parts/rentals/rental_view.jade
+++ b/parts/rentals/rental_view.jade
@@ -12,25 +12,19 @@ template(name='rental_view')
             //-         +rental_calendar
             .row
                 .four.wide.column
-                    a.ui.fluid.button(href='/m/rental' title='rentals')
+                    a.ui.fluid.button(href='/rentals' title='rentals')
                         i.left.chevron.icon
-                        //- +i name='handshake' classes='ui mini inline image'
                         |rentals
                     +rental_status
                     .ui.header 
                         |#{hourly_dollars}c
                         small /hr standard rate
-                    if security_deposit_required
-                        .ui.header 
-                            |#{security_deposit_amount}c
-                            small security deposit
-                    img.ui.centered.rounded.medium.invert.image(src="{{c.url image width=400 height=400 crop='fit'}}")
                     if can_edit
                         a.ui.fluid.button(href="/rental/#{_id}/edit")
                             i.pencil.icon
                             |edit
+                    img.ui.centered.rounded.medium.invert.image(src="{{c.url image width=400 height=400 crop='fit'}}")
                     +rental_stats
-        
                     .ui.header added by #{_author_username}
                     |#{when}
                     with _author_id
@@ -48,19 +42,112 @@ template(name='rental_view')
                         i.user.clock.icon
                         | handler
                     +single_user_view key='handler_username' direct=true
-                    +comments
                 .eight.wide.column
                     .ui.large.center.aligned.inline.header #{title}
                     .ui.segment.f4
                         +html_view key='description' label='description' icon='content' direct=true
                     div
+                    if security_deposit_required
+                        .ui.header 
+                        |$#{security_deposit_amount}
+                        small security deposit
                     +text_view key='contact_info' label='contact info' icon='info' direct=true
                     div
                     +link_view key='amazon_referral_link' label='amazon referral link' icon='amazon' direct=true
                     +rental_calendar
                     +rental_view_reservations
+                    +comments
                 .four.wide.column
                     +reserve_button
+                    +boolean_view key='daily_rate' label='daily rate' icon='sun' direct=true
+                    if daily_rate
+                        +float_view key='daily_dollars' label='daily rate' icon='exchange' direct=true
+                    div
+                    +boolean_view key='auction' label='auction' icon='podium-with-audience--v2' direct=true
+                    if auction
+                        +number_view key='auction_cutoff_hours' label='auction cutoff (hours)' direct=true
+                        +float_view key='minimum_bid' label='hour minimum bid' icon='refund' direct=true
+                    div
+                    +boolean_view key='security_deposit_required' label='security deposit required' icon='lock' direct=true
+                    if security_deposit_required
+                        +number_view key='security_deposit_amount' label='security deposit amount' icon='lock' direct=true tooltip='amount will be held from renters account then returned upon successful transaction'
+                        div
+                        +boolean_view key='friends_exempt' label='friends exempt' icon='users' direct=true
+                        
+                    +boolean_view key='approval_required' label='approval required' icon='checkmark' direct=true
+                    if approval_required
+                        div
+                        |you will receive a notification when reservations are requested
+                    .ui.small.header
+                        +i name='refund'
+                        | refunds
+                    +boolean_view key='allow_refunds' label='allow refunds' icon='refund' direct=true
+                    if allow_refunds
+                        +number_view key='full_refund_cutoff_hours' label='full refund cutoff hours' icon='clock' direct=true
+                        +number_view key='half_refund_cutoff_hours' label='half refund cutoff hours' icon='clock' direct=true
+
+                    .title.header
+                        i.pie.chart.icon 
+                        |ownership
+                        i.dropdown.icon
+                    .content
+                        +single_user_view key='owner_username' label='owner' direct=true
+                        +single_user_view key='handler_username' label='handler' direct=true
+                    .title.header
+                        i.clock.icon
+                        |availability
+                        i.dropdown.icon
+                    .content
+                        +array_view key='availability_tags' label='availability tags' icon='clock' direct=true
+                        +boolean_view key='available' label='currently available' direct=true
+                        +multi_doc_view key='available_days' label='available days' ref_model='day_of_week' direct=true
+                    .title.header
+                        i.users.icon
+                        |audience
+                        i.dropdown.icon
+                    .content
+                        +boolean_view key='transaction_number_restriction' label='transaction number restriction' icon='hashtag' direct=true
+                        if transaction_number_restriction
+                            +number_view key='transaction_number_restriction_threshold' label='transaction number restriction threshold' direct=true
+                        +boolean_view key='transaction_amount_restriction' label='transaction amount restriction' icon='money' direct=true
+                        if transaction_amount_restriction
+                            +number_view key='transaction_amount_restriction_threshold' label='transaction amount restriction threshold' direct=true
+                        +boolean_view key='visible_to_public' label='visible to public' direct=true
+                        unless visible_to_public
+                            +boolean_view key='visible_to_friends' label='visible to friends' direct=true
+                        unless visible_to_public
+                            +boolean_view key='visible_to_specific_people' label='visible to specific people' direct=true
+                            if visible_to_specific_people
+                                +multi_user_view key='visible_to_member_ids' label='visible to members:' direct=true
+                    .title.header
+                        i.people.carry.icon
+                        |delivery
+                        i.dropdown.icon
+                    .content
+                        .ui.small.header
+                            +i name='clock' classes='ui inline tiny image'
+                            |reservation start
+                        +boolean_view key='res_start_pickup' label='pickup' icon='truck' direct=true
+                        +boolean_view key='res_start_dropoff' label='dropoff' icon='dolly' direct=true
+                        if res_start_dropoff
+                            +number_view key='res_start_dropoff_fee' label='reservation start dropoff fee' icon='low-price' direct=true
+                        .ui.small.header
+                            i.clock.icon
+                            |reservation end
+                        +boolean_view key='res_end_dropoff' label='dropoff' icon='dolly' direct=true
+                        +boolean_view key='res_end_pickup' label='pickup' icon='truck' direct=true
+                        if res_end_pickup
+                            +number_view key='res_end_pickup_fee' label='reservation end pickup fee' icon='low-price' direct=true
+                    .title.header
+                        i.bell.icon
+                        |notifications
+                        i.dropdown.icon
+                    .content
+                        +boolean_view key='notify_on_reservation' label='on new reservation' icon='plus' direct=true
+                        +boolean_view key='notify_on_cancelation' label='on reservation cancelation' icon='cancel-2--v1' direct=true
+
+                    
+                    
                     
 
 template(name='rental_stats')
@@ -100,28 +187,34 @@ template(name='rental_status')
     else 
         .ui.label off the clock
         
+        
+        
 template(name='reserve_button')
-    .ui.big.green.fluid.button.new_reservation 
-        .ui.inverted.header 
+    unless approval_required
+        .ui.big.green.fluid.button.new_reservation 
             |reserve
-            //- +i name='play' classes='ui inline mini image'
+    else 
+        .ui.big.blue.fluid.button.new_reservation 
+            |request
+
+
 
 template(name='rental_view_reservations')
-    .ui.inline.header 
+    .ui.header 
         i.clock.icon
         |reservations
-    .ui.icon.button.set_card_view
-        i.clone.icon
-    .ui.icon.button.set_segment_view
-        i.list.icon
-    .ui.hidden.divider
-    if view_res_cards
-        .ui.stackable.three.cards
-            each reservations
-                +res_card
-    else if view_res_segments
-        each reservations
-            +reservation_segment
+    //- .ui.icon.button.set_card_view
+    //-     i.clone.icon
+    //- .ui.icon.button.set_segment_view
+    //-     i.list.icon
+    //- .ui.hidden.divider
+    //- if view_res_cards
+    //-     .ui.stackable.three.cards
+    //-         each reservations
+    //-             +res_card
+    //- else if view_res_segments
+    each reservations
+        +reservation_segment
         
 template(name='set_date_filter')        
     .ui.button.set_date_filter(class=date_filter_class)
@@ -138,10 +231,11 @@ template(name='reservation_segment')
             //- |{{long_date start_datetime}}
             small to 
             |{{cal_time end_datetime}}
+        //- .ui.inline.header #{_author_username}
+        .ui.inline.header #{author.name}
         .ui.grey.inline.header #{hour_duration}hrs
         .ui.grey.inline.header(title='credits')
-            //- i.coins.icon
-            | #{cost}c
+            | $#{cost}
         .ui.small.inline.header #{when} by #{_author_username}
         a.ui.large.button(href="/reservation/#{_id}/view")
             |view
