--- a/parts/rentals/rentals.jade
+++ b/parts/rentals/rentals.jade
@@ -1,7 +1,7 @@
 template(name='rentals')
-    .ui.stackable.padded.grid
-        .four.wide.right.aligned.column
-            .ui.header 
+    .ui.stackable.grid
+        .four.wide.column
+            .ui.inline.header 
                 |rentals
             .ui.icon.button.add_rental
                 i.plus.icon
@@ -22,24 +22,22 @@ template(name='rentals')
                     +sort_item key='points' label='most rented' direction='1'
             .ui.icon.transparent.input
                 i.search.icon
-                input(type='text' placeholder='search...')
-            div
+                input.rental_search(type='text' placeholder='search...')
             |available
-            .ui.button.set_today
+            .ui.compact.button.set_today
                 |today
-            .ui.button.set_tomorrow
+            .ui.compact.button.set_tomorrow
                 |tomorrow
-            .ui.button.set_this_weekend
+            .ui.compact.button.set_this_weekend
                 |this weekend
-            .ui.hidden.divider
-                
-            if viewing_cards
-                .ui.stackable.four.cards
+            .largescroll
+                if viewing_cards
+                    .ui.stackable.three.cards
+                        each rentals
+                            +rental_card
+                else if viewing_segments
                     each rentals
-                        +rental_card
-            else if viewing_segments
-                each rentals
-                    +rental_segment
+                        +rental_segment
                 
 
 
@@ -53,13 +51,13 @@ template(name='rental_cloud')
     //- i.grey.tags.icon
     //- .ui.inline.header tags
     if selected_rental_tags
-        #clear_tags.ui.active.icon.button
+        #clear_tags.ui.active.icon.small.button
             i.remove.icon
         each selected_rental_tags
-            .unselect_rental_tag.ui.active.button
+            .unselect_rental_tag.ui.active.small.button
                 strong #{this}
     each all_rental_tags
-        .ui.compact.button.select_rental_tag(class=cloud_tag_class) 
+        .ui.compact.small.button.select_rental_tag(class=cloud_tag_class) 
             strong #{this.name}
 
 
@@ -67,15 +65,17 @@ template(name='rental_cloud')
 
 template(name='rental_card')
     .ui.card
+        .content
+            a.ui.inline.header.log_view(href="/rental/#{_id}/view") #{title} 
         if image
             a(href="/rental/#{_id}/view")
                 img.ui.rounded.image(src="{{c.url image width=400 height=400 crop='lpad'}}")
         .content
-            a.ui.inline.header.log_view(href="/rental/#{_id}/view") #{title} 
+            .right.floated.meta
                 if hourly_dollars
-                    .ui.label #{hourly_dollars}c/hr
+                    | #{hourly_dollars}c/hr
                 if daily_dollars
-                    .ui.label #{daily_dollars}c/day
+                    | #{daily_dollars}c/day
             +rental_status
         .content
             if security_deposit_required
@@ -88,14 +88,14 @@ template(name='rental_card')
                 each public_location_tags
                     .ui.label #{this}
             div
-            i.grey.tag.icon
-            //- +ismall name='tags'
-            each tags
-                .ui.label #{this}
+            //- i.grey.tag.icon
+            //- //- +ismall name='tags'
+            //- each tags
+            //-     .ui.label #{this}
             //- div
             //- +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' add_label='bookmark' remove_label='unbookmark'  big=true
             //- +voting
-            div
+            //- div
             //- if currentUser
             //-     if can_edit
             //-         a.ui.button(href="/rental/#{_id}/edit")
@@ -105,7 +105,7 @@ template(name='rental_card')
             //-     |view
             //-     i.right.chevron.icon
             //- +author_info
-            +reserve_button
+            //- +reserve_button
 
 
 template(name='rental_segment')
